scrollbar bug

--- a/css/common/typography.css
+++ b/css/common/typography.css
@@ -1,16 +1,19 @@
+:root{
+    --default_font_family: "Cera Pro";
+}
 @font-face {
-    font-family: 'Cera Pro';
+    font-family: "Cera Pro";
     src: url('CeraPro-Regular.eot');
 }
 
 .body{
-    font: 400 15px "Cera Pro";
+    font: 400 15px --default_font_family;
 }
 
 .link{
     text-decoration: none;
     color: #FFFFFF;
-    font: 400 15px "Cera Pro";
+    font: 400 15px --default_font_family;
 }
 .link:visited{
     color: #FFFFFF;
@@ -20,45 +23,65 @@
     color: #FFFFFF;
 }
 .phone{
-    font: 500 20px "Cera Pro";
+    font: 500 20px --default_font_family;
 }
 .title{
-    font: 400 18px "Cera Pro";
+    font: 400 18px --default_font_family;
 }
 .nav_item_content{
-    font: 400 16px "Cera Pro";
+    font: 400 16px --default_font_family;
 }
 .product_type{
-    font: 500 20px "Cera Pro";
+    font: 500 20px --default_font_family;
     color: #FFFFFF;
     z-index: 0;
 }
 .product_name{
-    font: 500 35px "Cera Pro";
+    font: 500 35px --default_font_family;
     color: #FFFFFF;
     z-index: 0;
 }
 .product_price{
-    font: 500 34px "Cera Pro";
+    font: 500 34px --default_font_family;
     color: #FFFFFF;
     z-index: 0;
 }
-.best_offer__span{
-    font: 500 28px "Cera Pro";
+.showcase_price{
+    font: 500 22px "Cera Pro";
+    color: #333333;
+}
+.section_title{
+    font: 500 28px --default_font_family;
     color: #333333;
 }
 .best_offer__button{
-    font: 400 18px "Cera Pro";
+    font: 400 18px --default_font_family;
 }
 .item_name{
-    font: 500 16px "Cera Pro";
+    font: 500 16px --default_font_family;
     color: #333333;  
 }
 .item_article{
-    font: 400 14px "Cera Pro";
+    font: 400 14px --default_font_family;
     color: #188145;
 }
 .avilability{
-    font: 400 14px "Cera Pro";
+    font: 400 14px --default_font_family;
     color: #188145;
+}
+.go_catalog{
+    font: 500 18px --default_font_family;
+    color: #FFFFFF;
+}
+.inspiration_item_title{
+    font: 500 24px --default_font_family;
+}
+.article{
+    font: 400 16px --default_font_family;
+    word-wrap: break-word;
+    max-width: 87%;
+}
+.copyright{
+    font: 400 12px --default_font_family;
+    color: #9C9C9C;
 }
