--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,12 @@
 .wrapper{
     height: 100vh;
 }
+.container{
+    padding: 0px 60px 0px 61px;
+}
 .body{
     margin: 0px;
+    overflow-x: hidden;
 }
 .header{
     background-color: #333333;
@@ -128,7 +132,7 @@
 .banner-wrap{
     display: flex;
     justify-content: space-between;
-    margin: 93px 60px 0px 61px;
+    margin-top: 93px;
 }
 .text_wrap{
     position: absolute;
@@ -154,7 +158,7 @@
     height: 100%;
 }
 .space-between{
-    padding: 20px 0px 0px 0px;
+    padding-top: 20px;
 }
 .bg_image{
     max-height: 586px;
@@ -173,7 +177,7 @@
 }
 /* Временно */
 .showcase{
-    margin: 91px 60px 0px 58px;
+    margin-top: 91px;
 }
 
 .top{
@@ -195,6 +199,7 @@
     display: flex;
 }
 .best_offer_nav_button{
+    cursor: pointer;
     max-width: 36px;
     max-height: 36px;
     height: 36px;
@@ -244,10 +249,6 @@
     display: flex;
     justify-content: space-between;
 }
-.showcase_price{
-    font: 500 22px "Cera Pro";
-    color: #333333;
-}
 .product_item_price_wrap{
     display: flex;
     padding: 10px 0px 0px 0px;
@@ -255,5 +256,140 @@
 .rating{
     padding: 0px 10px 0px 0px;
 }
-
+.big_banner{
+    max-width: 1857px;
+    max-height: 198px;
+}
+.big_banner__img{
+    width: 100%;
+    height: 100%;
+}
+.small_banners{
+    padding: 30px 0px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.banner_item{
+    max-width: 588px;
+    width: 100%;
+}
+.go_catalog_button_wrap{
+    width: inherit;
+    max-height: 54px;
+    padding: 30px 0px;
+}
+.go_catalog{
+    background-color: #27AE60;
+    border: 0px;
+    height: 54px;
+    width: 100%;
+    cursor: pointer;
+}
+.gap{
+    padding-right: 10px;
+}
+.history_banner{
+    margin: 60px 0px;
+    background: #EAF8F0;
+    height: 523px;
+    width: 1800px;
+}
+.history_banner_wrapper{
+    width: 100%;
+    height: 100%; 
+}
+.inspiration_main{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+.inspiration_item{
+    max-height: 386px;
+    display: flex;
+}
+.inspiration_item_desc{
+    padding: 54px 28px 24px 37px;
+    max-width: 362px;
+    background: #E9E4FF;
+    display: flex;
+    flex-direction: column;
+}
+.green{
+    background: #D2FFE5;
+}
+.inspiration_nav_button{
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: auto;
+}
+.dots_wrapper{
+    display: flex;
+    justify-content: space-between;
+}
+.dots_slider{
+    margin-top: 30px;
+    justify-content: center;
+    display: flex;
+}
+.dot{
+    cursor: pointer;
+    height: 4px;
+    margin-right: 10px;
+    width: 36px;
+    border-radius: 100px;
+    border: 0px;
+    background-color: #E0E0DD;
+}
+.active{
+    background-color: #27AE60;
+}
+.instagram_main{
+    margin-top: 35px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.instagram_main_row{
+    display: flex;
+    width: max-content;
+    width: 100%;
+}
+.footer{
+    background: #333333;
+}
+.footer_top_line{
+    padding: 15px 0px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 139px;
+}
+.footer_bottom_line{
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 127px;
+    margin-bottom: 47px;
+}
+.social{
+    display: flex;
+}
+.facebook{
+    height: 48px;
+    width: 48px;
+    background: url("/img/facebook.svg") no-repeat;
+}
+.instagram_icon{
+    height: 48px;
+    width: 48px;
+    background: url("/img/instagram.svg") no-repeat;
+}
+.youtube{
+    height: 48px;
+    width: 48px;
+    background: url("/img/youtube.svg") no-repeat;
+}
 
